--- a/templates/stub.erb
+++ b/templates/stub.erb
@@ -1,5 +1,6 @@
 stub-zone:
   name: "<%= @name %>"
+  stub-first: yes
 <% if @address -%>
 <% addrs = PuppetX::Unbound::ValidateAddrs.new(@address) -%>
 <% addrs.name_list.each do |addr| -%>
