--- a/templates/stub.erb
+++ b/templates/stub.erb
@@ -9,4 +9,6 @@ stub-zone:
   stub-addr: <%= addr %>
 <% end -%>
 <% end -%>
+<% if @stub_first == 'yes' -%>
   stub-first: <%= @stub_first %>
+<% end -%>
